normalization term added
normalization term added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 numpy
 matplotlib
 scikit-learn
-pandas
-smtplib
-seaborn
-ast
 torch
 torchvision
-pillow
 tqdm
 opencv-python
 scikit-image
+argparse
